--- a/login.html
+++ b/login.html
@@ -120,7 +120,10 @@
 </label>
                             </div>
                         </div>
-                         <button type="submit">Login</button>
+                        <!-- Replace the existing Login button with this styled button -->
+                                 <button type="submit" class="btn btn-primary btn-block w-100 py-2" style="font-weight:600; border-radius:8px; letter-spacing:1px; font-size:1.1rem; margin-top:1rem;">
+                                     Login
+                                 </button>
 </form>
                     <div class="text-center">
                         <small class="text-muted text-center">
