--- a/register.html
+++ b/register.html
@@ -447,31 +447,33 @@
     </div>
 
     
-    <script>
-        const inputPasswords = document.querySelectorAll('input[type="password"]');
-        const eyeIcons = document.querySelectorAll('.fe-eye');
+   <script>
+    // Password show/hide logic
+    const inputPasswords = document.querySelectorAll('input[type="password"]');
+    const eyeIcons = document.querySelectorAll('.fe-eye');
 
-        eyeIcons.forEach((eyeIcon, index) => {
-            eyeIcon.addEventListener('click', function() {
-                const input = inputPasswords[index];
-                const type = input.getAttribute('type') === 'password' ? 'text' : 'password';
-
-                input.setAttribute('type', type);
-
-                this.classList.toggle('fe-eye');
-                this.classList.toggle('fe-eye-off');
-            });
+    eyeIcons.forEach((eyeIcon, index) => {
+        eyeIcon.addEventListener('click', function() {
+            const input = inputPasswords[index];
+            const type = input.getAttribute('type') === 'password' ? 'text' : 'password';
+            input.setAttribute('type', type);
+            this.classList.toggle('fe-eye');
+            this.classList.toggle('fe-eye-off');
         });
+    });
 
-        document.getElementById('Registerform').addEventListener('submit', function(e) {
-    e.preventDefault();
-    // Optionally, save user info to localStorage for demo
-    window.location.href = "dashboard/deposit/dashboard.html";
-});
-    }
-});
-        localStorage.setItem('userFullName', document.getElementById('full_name').value);
-    </script>
+    // Redirect to login.html after sign up (for static/demo use)
+    document.addEventListener('DOMContentLoaded', function() {
+        // Select the registration form by method and action
+        const registerForm = document.querySelector('form[action="https://generalalpha.com/register"]');
+        if (registerForm) {
+            registerForm.addEventListener('submit', function(e) {
+                e.preventDefault();
+                window.location.href = "login.html";
+            });
+        }
+    });
+</script>
 
     <!-- Smartsupp Live Chat script -->
 <script type="text/javascript">
