--- a/register.html
+++ b/register.html
@@ -80,7 +80,7 @@
                 
                 
 
-                <form id="Registerform">
+                <form id="registerForm">
                     <input type="hidden" name="_token" value="RyTGgklWk6hSQMk5pBfICM4MVzFTCFTFg0Lhw96u" autocomplete="off">                    <div class="row">
                         <div class="col-12 col-md-6">
                             <div class="form-group">
