--- a/dashboard/deposit/dashboard.html
+++ b/dashboard/deposit/dashboard.html
@@ -399,7 +399,11 @@ function getFirstName() {
 
 document.addEventListener('DOMContentLoaded', function() {
     // Show welcome message
-    const userName = localStorage.getItem('dashboardUserName');
+    const welcomeEl = document.getElementById('welcome-message');
+    if (welcomeEl) {
+        welcomeEl.textContent = 'Welcome ' + getFirstName();
+    // Place this script after the welcomeMsg element
+         const userName = localStorage.getItem('dashboardUserName');
     if (userName) {
         document.getElementById('welcomeMsg').textContent = "Welcome, " + userName;
     }
