--- a/dashboard/deposit/deposit.html
+++ b/dashboard/deposit/deposit.html
@@ -106,10 +106,11 @@
                             <label for="plan" class="form-label">Choose Investment Plan</label>
                             <select class="form-select" id="plan" required>
                                 <option value="">Select a plan</option>
-                                <option value="starter">Starter Plan - $100 min</option>
-                                <option value="silver">Silver Plan - $1,000 min</option>
-                                <option value="gold">Gold Plan - $5,000 min</option>
-                                <option value="platinum">Platinum Plan - $20,000 min</option>
+                                <option value="starter">First Package! $100 min - $999 max</option>
+                                <option value="silver">Second Package! $2,500 min - $5,900 max</option>
+                                <option value="gold">Third Package! $9,000 min - $19,750 max</option>
+                                <option value="platinum">Fourth Package! $15,000 min - $39,999 max</option>
+                                <option value="platinum">Gold Package! $43,500 min - Unlimted</option>
                             </select>
                         </div>
                         <div class="mb-3">
@@ -124,6 +125,7 @@
                                 <option value="usdt">Tether (USDT)</option>
                                 <option value="eth">Ethereum (ETH)</option>
                                 <option value="trx">Tron (TRX)</option>
+                                <option value="bnb">Binance Coin (BNB)</option>
                             </select>
                         </div>
                         <div id="walletAddressSection" style="display:none;">
@@ -153,7 +155,9 @@
         btc: "bc1qexamplebtcaddress1234567890",
         usdt: "TUSDTexampleaddress1234567890",
         eth: "0xExampleEthereumAddress1234567890",
-        trx: "TExampleTronAddress1234567890"
+        trx: "TExampleTronAddress1234567890",
+        bnb: "0x1234567890abcdef1234567890abcdef12345678"
+        
     };
 
     const cryptoSelect = document.getElementById('crypto');
