--- a/dashboard/deposit/settings.html
+++ b/dashboard/deposit/settings.html
@@ -157,11 +157,117 @@
 
         <div class="settings-section">
             <h3>KYC Verification</h3>
-            <p>To comply with regulations and enable withdrawals, please complete your KYC (Know Your Customer) verification.</p>
+            <p>To comply with regulations and enable withdrawals, please complete your KYC verification.</p>
             <button class="btn btn-outline-primary">Start KYC Verification</button>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Place this just before the closing </body> tag -->
+
+<!-- KYC Modal -->
+<div class="modal fade" id="kycModal" tabindex="-1" aria-labelledby="kycModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content" style="background:#18232b;color:#fff;">
+        <div class="modal-header">
+          <h5 class="modal-title" id="kycModalLabel">KYC Verification</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="kycForm">
+            <div class="mb-3">
+              <label for="kycFullName" class="form-label">Full Name</label>
+              <input type="text" class="form-control" id="kycFullName" required>
+            </div>
+            <div class="mb-3">
+              <label for="kycIdType" class="form-label">ID Type</label>
+              <select class="form-select" id="kycIdType" required>
+                <option value="">Select</option>
+                <option value="passport">Passport</option>
+                <option value="driver">Driver's License</option>
+                <option value="national">National ID</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="kycIdFile" class="form-label">Upload ID Document</label>
+              <input type="file" class="form-control" id="kycIdFile" accept="image/*,.pdf" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Submit KYC</button>
+            <div id="kycStatus" class="mt-2"></div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <script>
+  document.querySelectorAll('.settings-section button.btn-outline-primary').forEach(function(btn){
+      if(btn.textContent.includes('KYC')) {
+          btn.addEventListener('click', function() {
+              var kycModal = new bootstrap.Modal(document.getElementById('kycModal'));
+              kycModal.show();
+          });
+      }
+  });
+  
+  // Demo KYC form submission
+  document.getElementById('kycForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      var status = document.getElementById('kycStatus');
+      status.innerHTML = '<span class="text-success">KYC submitted! We will review your documents and notify you soon.</span>';
+      setTimeout(() => {
+          var modal = bootstrap.Modal.getInstance(document.getElementById('kycModal'));
+          modal.hide();
+          status.innerHTML = '';
+          document.getElementById('kycForm').reset();
+      }, 1800);
+  });
+  </script>
+
+  <!-- Add this modal just before the closing </body> tag -->
+<div class="modal fade" id="twoFAModal" tabindex="-1" aria-labelledby="twoFAModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content" style="background:#18232b;color:#fff;">
+        <div class="modal-header">
+          <h5 class="modal-title" id="twoFAModalLabel">Set Up Two-Factor Authentication</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center">
+          <p>Scan this QR code with your authenticator app (Google Authenticator, Authy, etc.):</p>
+          <img src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=otpauth://totp/GeneralAlpha:user@example.com?secret=JBSWY3DPEHPK3PXP&issuer=GeneralAlpha" alt="2FA QR Code" class="mb-3" style="background:#fff;padding:8px;border-radius:8px;">
+          <p class="mt-2">Or enter this code manually: <b>JBSWY3DPEHPK3PXP</b></p>
+          <form id="verify2faForm" class="mt-3">
+            <label for="twoFACode" class="form-label">Enter 6-digit code from your app</label>
+            <input type="text" id="twoFACode" class="form-control mb-2" maxlength="6" pattern="\d{6}" required autocomplete="one-time-code" style="max-width:160px;margin:0 auto;">
+            <button type="submit" class="btn btn-primary w-100">Verify & Enable 2FA</button>
+            <div id="twoFAStatus" class="mt-2"></div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <script>
+  document.querySelector('.btn-outline-primary').addEventListener('click', function() {
+      var twoFAModal = new bootstrap.Modal(document.getElementById('twoFAModal'));
+      twoFAModal.show();
+  });
+  
+  // Demo 2FA verification (accepts "123456" as valid code)
+  document.getElementById('verify2faForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      var code = document.getElementById('twoFACode').value.trim();
+      var status = document.getElementById('twoFAStatus');
+      if(code === "123456") {
+          status.innerHTML = '<span class="text-success">2FA enabled successfully!</span>';
+          setTimeout(() => {
+              var modal = bootstrap.Modal.getInstance(document.getElementById('twoFAModal'));
+              modal.hide();
+          }, 1200);
+      } else {
+          status.innerHTML = '<span class="text-danger">Invalid code. Please try again.</span>';
+      }
+  });
+  </script>
 </body>
 </html>
