--- a/dashboard/deposit/dashboard.html
+++ b/dashboard/deposit/dashboard.html
@@ -488,23 +488,109 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../build/assets/theme-61cc1a47.js" defer></script>
     <script>
-        // Personalized welcome message with fallback to time-based greeting
-        document.addEventListener('DOMContentLoaded', function () {
-            var welcomeMessage = document.getElementById('welcome-message');
-            var userName = localStorage.getItem('dashboardUserName');
-            if (userName && userName.trim() !== "") {
-                welcomeMessage.textContent = "Welcome, " + userName + "!";
-            } else {
-                var hour = new Date().getHours();
-                if (hour < 12) {
-                    welcomeMessage.textContent = 'Good Morning!';
-                } else if (hour < 18) {
-                    welcomeMessage.textContent = 'Good Afternoon!';
-                } else {
-                    welcomeMessage.textContent = 'Good Evening!';
+document.addEventListener('DOMContentLoaded', function () {
+    // Personalized welcome message (already present)
+    var welcomeMessage = document.getElementById('welcome-message');
+    var userName = localStorage.getItem('dashboardUserName');
+    if (userName && userName.trim() !== "") {
+        welcomeMessage.textContent = "Welcome, " + userName + "!";
+    } else {
+        var hour = new Date().getHours();
+        if (hour < 12) {
+            welcomeMessage.textContent = 'Good Morning!';
+        } else if (hour < 18) {
+            welcomeMessage.textContent = 'Good Afternoon!';
+        } else {
+            welcomeMessage.textContent = 'Good Evening!';
+        }
+    }
+
+    // --- LIVE BALANCES & INVESTMENTS ---
+    // Utility functions
+    function getUserBalances() {
+        return JSON.parse(localStorage.getItem('userBalances') || '{}');
+    }
+    function getTotalInvestment() {
+        return parseFloat(localStorage.getItem('totalInvestment') || '0');
+    }
+    function getActiveInvestments() {
+        return JSON.parse(localStorage.getItem('activeInvestments') || '[]');
+    }
+    function getTotalProfit() {
+        return parseFloat(localStorage.getItem('totalProfit') || '0');
+    }
+    function getDepositHistory() {
+        return JSON.parse(localStorage.getItem('depositHistory') || '[]');
+    }
+    function getWithdrawalHistory() {
+        return JSON.parse(localStorage.getItem('withdrawalHistory') || '[]');
+    }
+    function getTotalBalance() {
+        const balances = getUserBalances();
+        let total = 0;
+        for (let k in balances) total += parseFloat(balances[k] || 0);
+        return total;
+    }
+
+    // Update dashboard cards and tables
+    function updateDashboardUI() {
+        const balances = getUserBalances();
+        // Coin balances
+        document.querySelectorAll('.card-subtitle.mb-1').forEach(function(el){
+            if(el.textContent.trim() === 'BTC') el.parentElement.querySelector('.card-title').textContent = '$' + (balances.BTC || 0).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2});
+            if(el.textContent.trim() === 'USDT') el.parentElement.querySelector('.card-title').textContent = '$' + (balances.USDT || 0).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2});
+            if(el.textContent.trim() === 'BNB') el.parentElement.querySelector('.card-title').textContent = '$' + (balances.BNB || 0).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2});
+            if(el.textContent.trim() === 'TRON') el.parentElement.querySelector('.card-title').textContent = '$' + (balances.TRX || 0).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2});
+            if(el.textContent.trim() === 'ETH') el.parentElement.querySelector('.card-title').textContent = '$' + (balances.ETH || 0).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2});
+        });
+        // Stat cards
+        document.querySelectorAll('.card-subtitle.mb-2').forEach(function(el){
+            if(el.textContent.trim() === 'Total Balance') el.parentElement.querySelector('.card-title').textContent = '$' + getTotalBalance().toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2});
+            if(el.textContent.trim() === 'Active Investments') el.parentElement.querySelector('.card-title').textContent = getActiveInvestments().length;
+            if(el.textContent.trim() === 'Total Investments') el.parentElement.querySelector('.card-title').textContent = '$' + getTotalInvestment().toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2});
+            if(el.textContent.trim() === 'Total Profit') el.parentElement.querySelector('.card-title').textContent = '$' + getTotalProfit().toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2});
+        });
+        // Deposit History
+        document.querySelectorAll('.card-header').forEach(function(header){
+            if(header.textContent.includes('Deposit')) {
+                const depositTable = header.parentElement.querySelector('tbody');
+                if (depositTable) {
+                    const deposits = getDepositHistory();
+                    let rows = '';
+                    deposits.forEach(function(dep) {
+                        rows += `<tr>
+                            <td>${dep.date}</td>
+                            <td>$${parseFloat(dep.amount).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</td>
+                            <td>${dep.currency}</td>
+                            <td><span class="badge bg-success">${dep.status}</span></td>
+                        </tr>`;
+                    });
+                    depositTable.innerHTML = rows;
+                }
+            }
+            // Withdrawal History
+            if(header.textContent.includes('Withdrawal')) {
+                const withdrawalTable = header.parentElement.querySelector('tbody');
+                if (withdrawalTable) {
+                    const withdrawals = getWithdrawalHistory();
+                    let rows = '';
+                    withdrawals.forEach(function(wd) {
+                        rows += `<tr>
+                            <td>${wd.date}</td>
+                            <td>$${parseFloat(wd.amount).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</td>
+                            <td>${wd.currency}</td>
+                            <td><span class="badge ${wd.status === 'Completed' ? 'bg-success' : 'bg-warning text-dark'}">${wd.status}</span></td>
+                        </tr>`;
+                    });
+                    withdrawalTable.innerHTML = rows;
                 }
             }
         });
-    </script>
+    }
+
+    updateDashboardUI();
+    setInterval(updateDashboardUI, 10000);
+});
+</script>
 </body>
 </html>
