--- a/dashboard/deposit/withdraw.html
+++ b/dashboard/deposit/withdraw.html
@@ -165,5 +165,136 @@
     });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+function populateWallets() {
+    const walletSelect = document.getElementById('walletSelect');
+    walletSelect.innerHTML = '<option value="">Choose from saved wallets...</option>';
+    const wallets = [
+        { type: 'btc', name: 'Bitcoin (BTC)' },
+        { type: 'usdt', name: 'Tether (USDT)' },
+        { type: 'eth', name: 'Ethereum (ETH)' },
+        { type: 'trx', name: 'Tron (TRX)' }
+    ];
+    let hasWallet = false;
+    wallets.forEach(w => {
+        const address = localStorage.getItem('wallet_' + w.type);
+        if(address) {
+            hasWallet = true;
+            const opt = document.createElement('option');
+            opt.value = w.type + ':' + address;
+            opt.textContent = `${w.name}: ${address}`;
+            walletSelect.appendChild(opt);
+        }
+    });
+    if(!hasWallet) {
+        const opt = document.createElement('option');
+        opt.value = "";
+        opt.textContent = "No saved wallets. Please add one in Add Wallet page.";
+        walletSelect.appendChild(opt);
+    }
+}
+
+// Utility to update balances in localStorage
+function getUserBalances() {
+    return JSON.parse(localStorage.getItem('userBalances') || '{}');
+}
+function setUserBalances(balances) {
+    localStorage.setItem('userBalances', JSON.stringify(balances));
+}
+function getWithdrawalHistory() {
+    return JSON.parse(localStorage.getItem('withdrawalHistory') || '[]');
+}
+function setWithdrawalHistory(history) {
+    localStorage.setItem('withdrawalHistory', JSON.stringify(history));
+}
+
+document.addEventListener('DOMContentLoaded', function() {
+    populateWallets();
+
+    // Add coin selection for withdrawal
+    const withdrawForm = document.getElementById('withdrawForm');
+    const amountDiv = withdrawForm.querySelector('.mb-3');
+    const coinDiv = document.createElement('div');
+    coinDiv.className = 'mb-3';
+    coinDiv.innerHTML = `
+        <label for="withdrawCoin" class="form-label">Select Coin Balance</label>
+        <select class="form-select" id="withdrawCoin" required>
+            <option value="">Choose coin...</option>
+            <option value="BTC">BTC</option>
+            <option value="USDT">USDT</option>
+            <option value="ETH">ETH</option>
+            <option value="BNB">BNB</option>
+            <option value="TRX">TRX</option>
+        </select>
+        <div id="withdrawCoinBalance" class="form-text text-info mt-1"></div>
+    `;
+    amountDiv.after(coinDiv);
+
+    // Show available balance when coin is selected
+    document.getElementById('withdrawCoin').addEventListener('change', function() {
+        const coin = this.value;
+        const balances = getUserBalances();
+        document.getElementById('withdrawCoinBalance').textContent = coin && balances[coin] !== undefined
+            ? `Available: $${balances[coin]}`
+            : '';
+    });
+
+    const useOtherWallet = document.getElementById('useOtherWallet');
+    const otherWalletSection = document.getElementById('otherWalletSection');
+    const walletSelect = document.getElementById('walletSelect');
+    const otherWalletType = document.getElementById('otherWalletType');
+    const otherWalletAddress = document.getElementById('otherWalletAddress');
+
+    useOtherWallet.addEventListener('change', function() {
+        if(this.checked) {
+            otherWalletSection.style.display = 'block';
+            walletSelect.required = false;
+            otherWalletType.required = true;
+            otherWalletAddress.required = true;
+        } else {
+            otherWalletSection.style.display = 'none';
+            walletSelect.required = true;
+            otherWalletType.required = false;
+            otherWalletAddress.required = false;
+        }
+    });
+
+    withdrawForm.addEventListener('submit', function(e) {
+        e.preventDefault();
+        const amount = parseFloat(document.getElementById('withdrawAmount').value);
+        const coin = document.getElementById('withdrawCoin').value;
+        if (!coin) {
+            alert('Please select a coin balance to withdraw from.');
+            return;
+        }
+        const balances = getUserBalances();
+        if (isNaN(amount) || amount <= 0) {
+            alert('Enter a valid amount.');
+            return;
+        }
+        if (amount > (balances[coin] || 0)) {
+            alert('Insufficient balance.');
+            return;
+        }
+        // Deduct balance
+        balances[coin] -= amount;
+        setUserBalances(balances);
+
+        // Add to withdrawal history
+        const history = getWithdrawalHistory();
+        history.unshift({
+            date: new Date().toLocaleString(),
+            amount: amount,
+            currency: coin,
+            status: Math.random() > 0.5 ? 'Pending' : 'Approved'
+        });
+        setWithdrawalHistory(history);
+
+        withdrawForm.style.display = 'none';
+        document.getElementById('waitMessage').style.display = 'block';
+    });
+});
+</script>
 </body>
 </html>
