--- a/dashboard/deposit/deposit.html
+++ b/dashboard/deposit/deposit.html
@@ -235,5 +235,127 @@
     });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</script>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<style>
+/* Bottom Nav Bar Styles */
+.bottom-nav-bar {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1050;
+    background: #181d36;
+    border-top: 1px solid #22284a;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0.5rem 0;
+    box-shadow: 0 -2px 12px rgba(0,0,0,0.08);
+}
+.bottom-nav-bar a {
+    flex: 1 1 0;
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+    font-size: 0.85rem;
+    padding: 0.25rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: background 0.1s;
+}
+.bottom-nav-bar a:active, .bottom-nav-bar a:focus {
+    background: #22303a;
+    color: #ff0101f1;
+}
+.bottom-nav-bar i {
+    font-size: 1.4rem;
+    margin-bottom: 2px;
+}
+@media (min-width: 992px) {
+    .bottom-nav-bar { display: none !important; }
+}
+/* Reduce the height and padding of bottom nav bar buttons */
+.bottom-nav-bar {
+    padding: 0.15rem 0 !important;
+}
+.bottom-nav-bar a {
+    font-size: 0.78rem !important;
+    padding: 0.10rem 0 !important;
+}
+.bottom-nav-bar i {
+    font-size: 1.1rem !important;
+    margin-bottom: 0px !important;
+}
+</style>
+<nav class="bottom-nav-bar" id="bottomNavBar" style="display:none;">
+    <a href="dashboard.html">
+        <i class="bi bi-house-door"></i>
+        <span>Home</span>
+    </a>
+    <a href="deposit.html">
+        <i class="bi bi-wallet2"></i>
+        <span>Deposit</span>
+    </a>
+    <a href="investmentplan.html">
+        <i class="bi bi-bar-chart-line"></i>
+        <span>Investment</span>
+    </a>
+    <a href="withdraw.html">
+        <i class="bi bi-arrow-down-circle"></i>
+        <span>Withdraw</span>
+    </a>
+    <a href="history.html">
+        <i class="bi bi-clock-history"></i>
+        <span>History</span>
+    </a>
+</nav>
+<script>
+// Show nav only if user is logged in (e.g., has balances or a login flag)
+document.addEventListener('DOMContentLoaded', function() {
+    // Adjust this logic to your actual login/session check
+    var isLoggedIn = !!localStorage.getItem('userBalances');
+    if(isLoggedIn) {
+        document.getElementById('bottomNavBar').style.display = 'flex';
+    }
+});
+</script>
+<script>
+    function applyTheme(mode) {
+        if (mode === "light") {
+            document.documentElement.setAttribute('data-theme', 'light');
+            document.body.style.background = "#fff";
+            document.body.style.color = "#222";
+        } else if (mode === "dark") {
+            document.documentElement.setAttribute('data-theme', 'dark');
+            document.body.style.background = "#0f171c";
+            document.body.style.color = "#fff";
+        } else {
+            // System
+            if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                document.documentElement.setAttribute('data-theme', 'dark');
+                document.body.style.background = "#0f171c";
+                document.body.style.color = "#fff";
+            } else {
+                document.documentElement.setAttribute('data-theme', 'light');
+                document.body.style.background = "#fff";
+                document.body.style.color = "#222";
+            }
+        }
+    }
+    document.addEventListener('DOMContentLoaded', function() {
+        const savedTheme = localStorage.getItem('themeMode') || 'system';
+        applyTheme(savedTheme);
+        // Listen for system theme changes if "system" is selected
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function(e) {
+            if ((localStorage.getItem('themeMode') || 'system') === 'system') {
+                applyTheme('system');
+            }
+        });
+    });
+    </script>
+</body>
 </body>
 </html>
