--- a/dashboard/deposit/deposit.html
+++ b/dashboard/deposit/deposit.html
@@ -76,7 +76,7 @@
 <body>
     <nav class="navbar navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="../../index.html">
+            <a class="navbar-brand" href="dashboard.html">
                 <img src="../../logo/logo-light.png" alt="General Alpha" width="160">
             </a>
             <div class="dropdown">
@@ -110,7 +110,7 @@
                                 <option value="silver">Second Package! $2,500 min - $5,900 max</option>
                                 <option value="gold">Third Package! $9,000 min - $19,750 max</option>
                                 <option value="platinum">Fourth Package! $15,000 min - $39,999 max</option>
-                                <option value="platinum">Gold Package! $43,500 min - Unlimted</option>
+                                <option value="goldplus">Gold Package! $43,500 min - Unlimted</option>
                             </select>
                         </div>
                         <div class="mb-3">
