--- a/dashboard/deposit/investmentplan.html
+++ b/dashboard/deposit/investmentplan.html
@@ -80,7 +80,7 @@
 <body>
     <nav class="navbar navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="../../index.html">
+            <a class="navbar-brand" href="dashboard.html">
                 <img src="../../logo/logo-light.png" alt="General Alpha" width="160">
             </a>
             <div class="dropdown">
@@ -159,7 +159,7 @@
                 <ul>
                     <li>Min: $100</li>
                     <li>Max: $999</li>
-                    <li>Duration: 24 hours</li>
+                    <li>Duration: 1 day</li>
                     <li>Total Profit: 16%</li>
                 </ul>
             </div>
@@ -196,7 +196,7 @@
                 <ul>
                     <li>Min: $2,500</li>
                     <li>Max: $5,900</li>
-                    <li>Duration: 72 hours</li>
+                    <li>Duration: 3 days</li>
                     <li>Total Profit: 24%</li>
                 </ul>
             </div>
@@ -300,7 +300,7 @@
             } else {
                 const profit = amount * 0.35;
                 const total = amount + profit;
-                result = `After 14 days, you will earn <b>$${profit.toFixed(2)}</b> profit.<br>Total return: <b>$${total.toFixed(2)}</b>`;
+                result = `After 7 days, you will earn <b>$${profit.toFixed(2)}</b> profit.<br>Total return: <b>$${total.toFixed(2)}</b>`;
             }
         } else if (plan === 'second') {
             if (amount < 2500 || amount > 5900) {
@@ -308,7 +308,7 @@
             } else {
                 const profit = amount * 0.24;
                 const total = amount + profit;
-                result = `After 7 days, you will earn <b>$${profit.toFixed(2)}</b> profit.<br>Total return: <b>$${total.toFixed(2)}</b>`;
+                result = `After 3 days, you will earn <b>$${profit.toFixed(2)}</b> profit.<br>Total return: <b>$${total.toFixed(2)}</b>`;
             }
         } else if (plan === 'fourth') {
             if (amount < 10000 || amount > 39999) {
@@ -316,7 +316,7 @@
             } else {
                 const profit = amount * 0.49;
                 const total = amount + profit;
-                result = `After 30 days, you will earn <b>$${profit.toFixed(2)}</b> profit.<br>Total return: <b>$${total.toFixed(2)}</b>`;
+                result = `After 14 days, you will earn <b>$${profit.toFixed(2)}</b> profit.<br>Total return: <b>$${total.toFixed(2)}</b>`;
             }
         } else if (plan === 'gold') {
             if (amount < 43500 || amount > 100000000000000) {
@@ -503,7 +503,6 @@
         }, 10000); // Check every 10 seconds for demo
     });
     </script>
-     </script>
     <!-- Add this before </body> -->
 <!-- Bootstrap Icons CDN -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -593,5 +592,39 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 });
 </script>
+<script>
+    function applyTheme(mode) {
+        if (mode === "light") {
+            document.documentElement.setAttribute('data-theme', 'light');
+            document.body.style.background = "#fff";
+            document.body.style.color = "#222";
+        } else if (mode === "dark") {
+            document.documentElement.setAttribute('data-theme', 'dark');
+            document.body.style.background = "#0f171c";
+            document.body.style.color = "#fff";
+        } else {
+            // System
+            if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                document.documentElement.setAttribute('data-theme', 'dark');
+                document.body.style.background = "#0f171c";
+                document.body.style.color = "#fff";
+            } else {
+                document.documentElement.setAttribute('data-theme', 'light');
+                document.body.style.background = "#fff";
+                document.body.style.color = "#222";
+            }
+        }
+    }
+    document.addEventListener('DOMContentLoaded', function() {
+        const savedTheme = localStorage.getItem('themeMode') || 'system';
+        applyTheme(savedTheme);
+        // Listen for system theme changes if "system" is selected
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function(e) {
+            if ((localStorage.getItem('themeMode') || 'system') === 'system') {
+                applyTheme('system');
+            }
+        });
+    });
+    </script>
 </body>
 </html>
