--- a/dashboard/deposit/settings.html
+++ b/dashboard/deposit/settings.html
@@ -122,7 +122,7 @@
 <body>
     <nav class="navbar navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="../../index.html">
+            <a class="navbar-brand" href="dashboard.html">
                 <img src="../../logo/logo-light.png" alt="General Alpha" width="160">
             </a>
             <div class="dropdown">
