--- a/dashboard/deposit/wallet.html
+++ b/dashboard/deposit/wallet.html
@@ -53,7 +53,7 @@
 <body>
     <nav class="navbar navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="../../index.html">
+            <a class="navbar-brand" href="dashboard.html">
                 <img src="../../logo/logo-light.png" alt="General Alpha" width="160">
             </a>
         </div>
